@@ -1,6 +1,6 @@
 ========================================================================
-README for Collaboration Infrastructure version 2.4
-Copyright (c) 2008-2012 Oliver Kreylos
+README for Collaboration Infrastructure version 2.5
+Copyright (c) 2008-2013 Oliver Kreylos
 ========================================================================
 
 Overview
@@ -34,7 +34,7 @@ Science Foundation.
 Requirements
 ============
 
-The Collaboration Infrastructure requires Vrui version 2.6 build 001 or
+The Collaboration Infrastructure requires Vrui version 2.7 build 001 or
 newer. To support audio and 2D video transmission, libspeex and
 libtheora have to be installed.
 
@@ -58,8 +58,8 @@ instructions need to be changed.
 2. Change into the Collaboration Infrastructure base directory:
    > cd CollaborationInfrastructure-<version>
 
-3. If the Vrui version installed in step 0 was not 2.6, or Vrui's
-   installation directory was changed from the default of ~/Vrui-2.6,
+3. If the Vrui version installed in step 0 was not 2.7, or Vrui's
+   installation directory was changed from the default of ~/Vrui-2.7,
    adapt the makefile using a text editor. Change the value of
    VRUI_MAKEDIR close to the beginning of the file as follows:
    VRUI_MAKEDIR := <Vrui install dir>/share/make
@@ -79,7 +79,7 @@ Configuring the Local Collaboration Environment
 The runtime system of the Collaboration Infrastructure is configured via
 a configuration file Collaboration.cfg in Vrui's configuration
 directory, which is the etc subdirectory inside Vrui's installation
-directory, or, by default, ~/Vrui-2.4/etc. The configuration file
+directory, or, by default, ~/Vrui-2.7/etc. The configuration file
 contains sections for the collaboration server and the collaboration
 client, the latter of which in turn includes a section for each
 configured protocol plug-in.
