@@ -1,1 +1,1 @@
-CollaborationInfrastructure 2.4
+CollaborationInfrastructure 2.5
